welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
		    if(getCouleurSol()==Color.Green){
                    ^SlugTracking:8: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
		if(estFaceMur()==true){
                ^